ChangeLog for herdstat

2005-06-02 Aaron Walker <ka0ttic@gentoo.org>

	* lib/string.cc, lib/string.hh: Added a default bool arg to
	util::string::split() that decides whether or not to push_back() and
	empty string if two consecutive delimiters are encountered.  This
	fixes a bug in reading the metacache (pkgs with a dev but no herd (not
	even "no-herd") would interpret the dev as a herd.
	* lib/Makefile.am: Removed cache.hh for now.
	* src/querycache.cc, src/querycache.hh, src/metacache.cc,
	src/metacache.hh: Don't inherit from cache_T.  It's more of a PITA
	than it's worth.  Instead inherit directly from std::vector.  Also
	cleaned up load/dump code a bit, trying to make it a tad faster.
	* src/action_pkg_handler.cc: Fixed bug if -p and -m are specified at
	the same time.  Only call formatter_T::set_attrs() if -m isnt
	specified.

2005-06-01 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_rc3).
	* lib/portage_find.cc: Fixed bug in find_package_in() that caused a
	search to fail if a pkg dir exists in an overlay but there's no
	ebuild.
	* lib/string.cc, lib/string.hh: Added htmlify() and unhtmlify() for
	lovely things like "&gt;", etc.
	* src/devaway.cc: Run away message through util::unhtmlify() before
	saving.  Fixes lv's &lt;jedi mind trick and any future ones.  Also
	added _fetched member to guarantee devaway is only fetched once.
	* src/querycache.cc, src/querycache.hh, src/querycache_xml_handler.cc,
	src/querycache_xml_handler.hh, src/querycachectl.cc: Bring back
	pkgcache from the dead, as we still have a need for it.  Renamed
	querycache_T.  Updated format of querycache.xml to make more sense.
	* src/action_pkg_handler.cc, src/action_pkg_handler.hh: Updated to use
	devaway_T.

2005-05-31 Aaron Walker <ka0ttic@gentoo.org>

	* src/pkgquery.cc, src/pkgquery.hh: Moved pkgQuery_T to it's own
	source files.
	* src/metacache.cc, src/metacache.hh: Added metacache_T which