@@ -1,11 +1,8 @@
-<!-- Automagically generated by the ToDo program on 2005-06-02 -->
+<!-- Automagically generated by the ToDo program on 06/02/05, 12:28 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
-    <note priority="veryhigh" time="1117704435">
-        herdstat -dp ciaranm ; herdstat -dp ciaranm slarti --with-herd shell-tools FAILS
-    </note>
     <note priority="medium" time="1117265590">
         herdstat --fetch should do any required fetching, not just herds.xml.
         <note priority="veryhigh" time="1117601645">
