@@ -59,12 +59,12 @@ pkgQuery_T::dump(std::ostream &stream) const
 bool
 pkgQuery_T::operator== (const pkgQuery_T &that) const
 {
-    debug_msg("pkgQuery_T::operator==");
-    debug_msg("this->query(%s) == that.query(%s) ? %d",
+    debug_msg(" pkgQuery_T::operator==");
+    debug_msg("   this->query(%s) == that.query(%s) ? %d",
         this->query.c_str(), that.query.c_str(), (this->query == that.query));
-    debug_msg("this->with(%s) == that.with(%s) ? %d",
+    debug_msg("   this->with(%s) == that.with(%s) ? %d",
         this->with.c_str(), that.with.c_str(), (this->with == that.with));
-    debug_msg("this->type(%d) == that.type(%d) ? %d",
+    debug_msg("   this->type(%d) == that.type(%d) ? %d",
         this->type, that.type, (this->type == that.type));
 
     return  /* normal lookup */
